Fixes desktop view grids alignment

--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,8 @@
 }
 
 .board-container {
-  width: 100vw;
+  /* width: 100vw; */
+  margin: 0 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -130,7 +131,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #333;
+  background-color: #222;
   color: #ddd;
 }
 
